--- a/src/HTML-CSS-3/produtos.html
+++ b/src/HTML-CSS-3/produtos.html
@@ -5,7 +5,7 @@
     <meta charset='utf-8'>
     <title>produto - Barbearia Alura</title>
     <link rel="stylesheet" href="reset.css">
-    <link rel='stylesheet' href='produtos.css'>
+    <link rel='stylesheet' href='style.css'>
 </head>
 <body>
     <header>
