--- a/src/HTML-CSS-3/produtos.html
+++ b/src/HTML-CSS-3/produtos.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta charset='utf-8'>
-    <title>produto - Barbearia Alura</title>
+    <title>Produtos - Barbearia Alura</title>
     <link rel="stylesheet" href="reset.css">
     <link rel='stylesheet' href='style.css'>
 </head>
