--- a/src/HTML-CSS-3/produtos.html
+++ b/src/HTML-CSS-3/produtos.html
@@ -15,7 +15,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="produto.html">produto</a></li>
+                    <li><a href="produtos.html">produto</a></li>
                     <li><a href="contato.html">Contato</a></li>
                 </ul>
             </nav>
