--- a/src/HTML-CSS-3/contato.html
+++ b/src/HTML-CSS-3/contato.html
@@ -10,12 +10,12 @@
 <body>
     <header>
         <div class="box">
-            <h1><img src="img/logo.png"></h1>
+            <h1><img src="img/logo.png" alt="Logo da Barbearia Alura"></h1>
 
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="produto.html">produto</a></li>
+                    <li><a href="produtos.html">produto</a></li>
                     <li><a href="contato.html">Contato</a></li>
                 </ul>
             </nav>
@@ -23,12 +23,88 @@
     </header>
 
     <main>
+        <form>
+            <label for="nome">Nome</label>
+            <input type="text" id="nome" placeholder="Nome Completo" class="default-input" required>
 
+            <label for="email">Email</label>
+            <input type="email" id="email" placeholder="email@dominio.com" class="default-input" required>
+
+            <label for="tel">Telefone</label>
+            <input type="tel" id="tel" placeholder="xx xxxxx-xxxx" class="default-input" required>
+
+            <label for="mensagem">Mensagem</label>
+            <textarea id="mensagem" placeholder="Deixe seu recado aqui!" class="default-input" required></textarea>
+
+            <fieldset>
+                <legend>Como prefere o nosso contato?</legend>
+
+                <label for="radio-email">
+                    <input type="radio" name="contato" value="email" id="radio-email">
+                    Email
+                </label>
+
+                <label for="radio-tel">
+                    <input type="radio" name="contato" value="tel" id="radio-tel">
+                    Telefone
+                </label>
+
+                <label for="radio-whatsapp">
+                    <input type="radio" name="contato" value="whatsapp" id="radio-whatsapp" checked>
+                    WhatsApp
+                </label>
+            </fieldset>
+
+            <fieldset>
+                <legend>Qual horário prefere ser atendido?</legend>
+
+                <select>
+                    <option>Manhã</option>
+                    <option>Tarde</option>
+                    <option>Noite</option>
+                </select>
+            </fieldset>
+
+            <label class="checkbox">
+                <input type="checkbox" checked>
+                Gostaria de receber nossas novidades por email?
+            </label>
+
+            <input type="submit" value="Enviar Dados" class="btn-enviar">
+        </form>
+
+        <table>
+            <thead>
+                <tr>
+                    <th>Dia</th>
+                    <th>Horário</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Segunda</td>
+                    <td>8h - 20h</td>
+                </tr>
+                <tr>
+                    <td>Quarta</td>
+                    <td>8h - 20h</td>
+                </tr>
+                <tr>
+                    <td>Sexta</td>
+                    <td>8h - 20h</td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td colspan="2"></td> 
+                </tr>
+            </tfoot>
+        </table>
     </main>
 
     <footer>
-        <img src="img/logo-branco.png">
-        <p class="copyright">&copy; Copyright Barbearia Alura - 2023</p>
+        <img src="img/logo-branco.png" alt="Logo da Barbearia Alura">
+        <legend class="copyright">&copy; Copyright Barbearia Alura - 2023</legend>
     </footer>
 </body>
 </html>
