--- a/src/HTML-CSS-4/contato.html
+++ b/src/HTML-CSS-4/contato.html
@@ -22,7 +22,7 @@
         </div>
     </header>
 
-    <main>
+    <main class="container">
         <form>
             <label for="nome">Nome</label>
             <input type="text" id="nome" placeholder="Nome Completo" class="default-input" required>
