--- a/src/HTML-CSS-4/produtos.html
+++ b/src/HTML-CSS-4/produtos.html
@@ -22,7 +22,7 @@
         </div>
     </header>
 
-    <main>
+    <main class="container">
         <ul class="produtos">
             <li>
                 <h2>Cabelo</h2>
