--- a/src/HTML-CSS-4/index.html
+++ b/src/HTML-CSS-4/index.html
@@ -24,13 +24,13 @@
         </div>
     </header>
 
-    <img class="banner" src="barbearia.jpg">
+    <img class="banner" src="img/barbearia.jpg">
 
     <main>
         <section class="principal">
             <h2 class="titulo-principal">Sobre a Barbearia Alura</h2>
 
-            <img class="utensilios" src="utensilios.jpg" alt="Utensílios de barbearia">
+            <img class="utensilios" src="img/utensilios.jpg" alt="Utensílios de barbearia">
 
             <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
@@ -59,7 +59,7 @@
                     <li class="item">Profissionais qualificados</li>
                     <li class="item">Pontualidade</li>
                     <li class="item">Limpeza</li>
-                </ul><img src="beneficios.jpg" class="img-beneficios">  <!-- precisa estar colado na lista -->
+                </ul><img src="img/beneficios.jpg" class="img-beneficios">  <!-- precisa estar colado na lista -->
             </div>
             <div class="video">
                 <iframe width="100%" height="315" src="https://www.youtube.com/embed/QRr6DpCkxSY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
